WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145931
OpenGLESSPI.h doesn't need to include UIKit.h
https://bugs.webkit.org/show_bug.cgi?id=145931
Summary
OpenGLESSPI.h doesn't need to include UIKit.h
Simon Fraser (smfr)
Reported
2015-06-12 10:28:21 PDT
OpenGLESSPI.h doesn't need to include UIKit.h
Attachments
Patch
(1.08 KB, patch)
2015-06-12 10:28 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-06-12 10:28:52 PDT
Created
attachment 254808
[details]
Patch
WebKit Commit Bot
Comment 2
2015-06-12 11:23:08 PDT
Comment on
attachment 254808
[details]
Patch Clearing flags on attachment: 254808 Committed
r185516
: <
http://trac.webkit.org/changeset/185516
>
WebKit Commit Bot
Comment 3
2015-06-12 11:23:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug