OpenGLESSPI.h doesn't need to include UIKit.h https://bugs.webkit.org/show_bug.cgi?id=145931

Reviewed by Darin Adler.

No need to suck in all of UIKit from OpenGLESSPI.h.

* platform/spi/ios/OpenGLESSPI.h:


Canonical link: https://commits.webkit.org/163980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185516 268f45cc-cd09-0410-ab3c-d52691b4dbfc