Source/WebCore/platform/spi/ios/OpenGLESSPI.h
@@ -24,7 +24,6 @@
  */
 
 #import <Foundation/Foundation.h>
-#import <UIKit/UIKit.h>
 
 #if USE(APPLE_INTERNAL_SDK)
 
